--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+./MachineLearning/PoEPriceTool/models
+./MachineLearning/PoEPriceTool/__pycache__
